--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ gunicorn==20.1.0
 idna==3.4
 proto-plus==1.22.1
 protobuf==4.21.11
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 requests==2.28.1
